2007-02-08  Michael Natterer  <mitch@gimp.org>

	Unbreak rectangle select tool undo handling a bit:

	* app/tools/gimprectangleselecttool.c (gimp_rect_select_tool_select):
	add boolean return value indicating if something was actually selected.

	(gimp_rect_select_tool_rectangle_changed): peek the newly pushed
	undo only if we selected something.

2007-02-08  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpratioentry.[ch]: added history and completion.
	This will need more work.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* README: eliminated another redundant article.

2007-02-07  Michael Natterer  <mitch@gimp.org>

	* app/tools/tools-enums.[ch]: remove enum GimpColorPickMode...

	* app/widgets/widgets-enums.[ch]: ...and add it here.

	* app/widgets/gimpgradienteditor.c: merge separate functions for
	picking FG and BG colors and update the new color area from the
	merged function.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c
	* app/widgets/gimpgrideditor.c: slightly increased the height of
	color buttons.

2007-02-07  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.[ch]: applied patch from Joao
	S. O. Bueno Calligaris which adds a preview for the color the
	cursor is currently hovering and reduces excess precision when
	displaying color components and gradient positions (bug #400907).

2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.c: don't compare floating
	point numbers for equality.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c: #define DBUS_API_SUBJECT_TO_CHANGE to fix
	compilation with outdated versions of D-Bus.

2007-02-07  Sven Neumann  <sven@gimp.org>

	* app/actions/view-actions.c
	* app/actions/view-commands.[ch]
	* app/display/gimpdisplayshell.[ch]
	* app/display/gimpdisplayshell-scale.[ch]
	* app/widgets/gimphelp-ids.h
	* menus/image-menu.xml.in: applied patch from Robert Helgesson that
	adds "Revert Zoom" functionality (bug #338168).
