@@ -9,6 +9,37 @@
 
 /* enumerations from "./gimpwidgetsenums.h" */
 GType
+gimp_aspect_type_get_type (void)
+{
+  static const GEnumValue values[] =
+  {
+    { GIMP_ASPECT_SQUARE, "GIMP_ASPECT_SQUARE", "square" },
+    { GIMP_ASPECT_PORTRAIT, "GIMP_ASPECT_PORTRAIT", "portrait" },
+    { GIMP_ASPECT_LANDSCAPE, "GIMP_ASPECT_LANDSCAPE", "landscape" },
+    { 0, NULL, NULL }
+  };
+
+  static const GimpEnumDesc descs[] =
+  {
+    { GIMP_ASPECT_SQUARE, N_("Square"), NULL },
+    { GIMP_ASPECT_PORTRAIT, N_("Portrait"), NULL },
+    { GIMP_ASPECT_LANDSCAPE, N_("Landscape"), NULL },
+    { 0, NULL, NULL }
+  };
+
+  static GType type = 0;
+
+  if (! type)
+    {
+      type = g_enum_register_static ("GimpAspectType", values);
+      gimp_type_set_translation_domain (type, GETTEXT_PACKAGE "-libgimp");
+      gimp_enum_set_value_descriptions (type, descs);
+    }
+
+  return type;
+}
+
+GType
 gimp_chain_position_get_type (void)
 {
   static const GEnumValue values[] =
